fix: text nowrap

--- a/linkerd.io/assets/scss/bulma.scss
+++ b/linkerd.io/assets/scss/bulma.scss
@@ -205,3 +205,7 @@ a {
 .navbar.is-fixed-top {
   z-index: 100000;
 }
+
+.text-nowrap {
+  white-space: nowrap !important;
+}
